# vino-db

./: LICENSE  README.md  pyproject.toml  wine_explore_initial.py
conf/: config.toml
scripts/: check_data_file_duplicates.py  create_vino_db.py  distinct_values_wines.py
sql/: add_rescaled_rating.sql  create_tables.sql  drop_tables.sql  rating_outliers.sql
src/vino_db/: __init__.py  cli.py  ddb.py  web_chat.py
