[project]
name = "vino-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Booth", email = "michael@databooth.com.au" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "duckdb>=1.3.2",
    "loguru>=0.7.3",
    "marimo>=0.15.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
]

[project.scripts]
vino-db = "vino_db:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
